--- a/nginx/html/success/github/index.html
+++ b/nginx/html/success/github/index.html
@@ -25,7 +25,7 @@
           인증 및 연동 성공!
         </div>
         <div style="width: 100%; text-align: center; font-size: large">
-          Boxthing으로 Notification 정보를
+          Boxthing으로 <span style="color: blue">Notification</span> 정보를
         </div>
         <div style="width: 100%; text-align: center; font-size: large">
           실시간으로 반영해드립니다.
