--- a/nginx/html/success/google/index.html
+++ b/nginx/html/success/google/index.html
@@ -37,7 +37,7 @@
             margin-bottom: 3%;
           "
         >
-          Boxthing으로 Calendar 정보를
+          Boxthing으로 <span style="color: blue">Calendar</span> 정보를
         </div>
         <div style="width: 100%; text-align: center; font-size: large">
           실시간으로 반영해드립니다.
